- add: Settings folder selection in file menu now contains a Default button to select the applications default settings folder
- add: Settings for account names for other sites. Coupling is done by GC code prefix like GC, OX and OC
- add: OKAPI support plugin
- add: OKAPI, Import My Finds plugin (imports all your logs with geocaches)
- add: OKAPI, Import by bounding box plugin added

V1.9.2.0

- fix: Query editor, operator now restored correctly after restarting GAPP
- fix: Warning dialog text when delete and ignore the active geocache
- fix: Search geocaches within a region fix for search within selection
- fix: Search geocaches within region for the first region in the list

V1.9.1.0

- fix: Export to Garmin and GPX for name prefix if geocache has extra/corrected coordinates
- add: Live API plugin to import the geocache images (image data only)
- fix: GSAK import, now able to handle attributes where the Inc property has not been set
- fix: GSAK import, now also reads the Corrected table for additional corrected coordinates
- change: Trackable group, added the extra delay setting too for importing the trackable logs
- add: Live API, import logs of geocaches (with setting to import maximum number of logs per geocache)
- change: French language updated (thanks icaunais and RHCV)
- fix: Live API, log geocache with geocache_visits.txt now imports also the geocache with prefix correctly
- change: Live API, import logs of other users now supports filtering on log types

V1.9.0.0

- change: French language updated (thanks icaunais and RHCV)
- fix: Copy to existing database contained an error when loading the target database file
- add: Framework, added Geocache Images collection to the framework
- add: Live API, Geocache images are now imported too (including the ones not in the listing)
- change: Main Window, status bar now also contains number of geocache images (imported through Live API)
- add: Data storage, added geocache images (default GAPP Data Storage only)